MAINTAINERCLEANFILES	= Makefile.in

ocfextdir		= /usr/lib/ocf/resource.d/linuxhajp
#ocfext_SCRIPTS		= hulft pgsql
#ocfext_SCRIPTS          = hulft pgsql hulft.rhel9_or_earlier hulft.rhel10 pgsql.rhel9_or_earlier pgsql.rhel10
ocfext_SCRIPTS          = hulft pgsql pgsql.rhel9_or_earlier pgsql.rhel10

EXTRA_DIST		= $(ocfext_SCRIPTS)
